keycloak-workstream/shared-services/k8s/base/nifi/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: nifi
spec:
  type: NodePort  
  selector:
    app: nifi-registry
  ports:
    - name: registry-ui
      port: 18080
      targetPort: registry-ui
