keycloak-workstream/shared-services/k8s/base/nifi/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster-registry-web-ui
  namespace: nifi
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: ingress-nifi-cluster-web-ui
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: registry-nifi.denali.jktruong.people.aws.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: registry
                port:
                  name: registry-ui
